[gd_scene load_steps=10 format=3 uid="uid://bf8kl8o2r0r66"]

[ext_resource type="Script" path="res://scenes/game_screen/game_screen.gd" id="1_c7x1m"]
[ext_resource type="LabelSettings" uid="uid://dou4u65afq00m" path="res://assets/gm_32_darkgrey.tres" id="1_k1qpa"]
[ext_resource type="LabelSettings" uid="uid://bo00yd8e2adh5" path="res://assets/gm_32_white.tres" id="1_te622"]
[ext_resource type="PackedScene" uid="uid://cyllrvn5usurh" path="res://scenes/memory_tile/memory_tile.tscn" id="2_bo7i8"]
[ext_resource type="Texture2D" uid="uid://dn0x5eqlr1eay" path="res://assets/ui/blue_button00.png" id="2_icp2n"]
[ext_resource type="Texture2D" uid="uid://d3aqf3rx746ky" path="res://assets/ui/yellow_button00.png" id="3_37kvk"]
[ext_resource type="Texture2D" uid="uid://covxi723tlbo3" path="res://assets/ui/green_button00.png" id="4_h4xvf"]
[ext_resource type="PackedScene" uid="uid://qaxmjmlyj4nb" path="res://scenes/scorer/scorer.tscn" id="8_pxe2d"]
[ext_resource type="PackedScene" uid="uid://dysxc5r1oetkp" path="res://scenes/game_over/game_over.tscn" id="9_v2cow"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7x1m")
mem_tile_scene = ExtResource("2_bo7i8")

[node name="GameOver" parent="." instance=ExtResource("9_v2cow")]
layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginGrid" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TileContainer" type="GridContainer" parent="HBoxContainer/MarginGrid"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginLabels" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme_override_constants/margin_right = 18

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginLabels"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="HB" type="HBoxContainer" parent="HBoxContainer/MarginLabels/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginLabels/VBoxContainer/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("1_k1qpa")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="HBoxContainer/MarginLabels/VBoxContainer/HB"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_k1qpa")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HB2" type="HBoxContainer" parent="HBoxContainer/MarginLabels/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginLabels/VBoxContainer/HB2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs"
label_settings = ExtResource("1_k1qpa")
vertical_alignment = 1

[node name="PairsLabel" type="Label" parent="HBoxContainer/MarginLabels/VBoxContainer/HB2"]
layout_mode = 2
text = "0 / 00"
label_settings = ExtResource("1_k1qpa")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="HBoxContainer/MarginLabels/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HBoxContainer/MarginLabels/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_icp2n")
texture_pressed = ExtResource("3_37kvk")
texture_hover = ExtResource("4_h4xvf")

[node name="Label" type="Label" parent="HBoxContainer/MarginLabels/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("1_te622")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="AudioStreamPlayer" parent="."]

[node name="Scorer" parent="." instance=ExtResource("8_pxe2d")]

[connection signal="pressed" from="HBoxContainer/MarginLabels/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
